# snippets

./: BUILD  Gopkg.toml  README.md  WORKSPACE  container.bzl  database_schema.sql
cmd/snippets_cron_reminders/: BUILD.bazel  main.go
cmd/snippets_cron_subscriptions/: BUILD.bazel  main.go
cmd/snippets_web/: BUILD.bazel  main.go  snippets_web_service.go
cmd/snippets_web/templates/: error.html  header.html  others.html  snippet_edit.html  snippet_view.html  snippet_week_navigate.html
example-workspace/: BUILD.bazel  WORKSPACE
pkg/dates/: BUILD.bazel  iso_week.go
pkg/schema/: BUILD.bazel  schema.go
pkg/util/: BUILD.bazel  health.go
