load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "snippets_cron_reminders_push",
    format = "Docker",
    image = "@snippets//cmd/snippets_cron_reminders:snippets_cron_reminders_container",
    registry = "my-docker-registry.com",
    repository = "snippets_cron_reminders",
)

container_push(
    name = "snippets_cron_subscriptions_push",
    format = "Docker",
    image = "@snippets//cmd/snippets_cron_subscriptions:snippets_cron_subscriptions_container",
    registry = "my-docker-registry.com",
    repository = "snippets_cron_subscriptions",
)

container_push(
    name = "snippets_web_push",
    format = "Docker",
    image = "@snippets//cmd/snippets_web:snippets_web_container_with_resources",
    registry = "my-docker-registry.com",
    repository = "snippets_web",
)
