load("//:container.bzl", "container_push_internal")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ProdriveTechnologies/snippets/cmd/snippets_cron_subscriptions",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/dates:go_default_library",
        "//pkg/schema:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/jinzhu/gorm/dialects/postgres:go_default_library",
    ],
)

go_binary(
    name = "snippets_cron_subscriptions",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "snippets_cron_subscriptions_container",
    entrypoint = ["/snippets_cron_subscriptions"],
    files = [":snippets_cron_subscriptions"],
)

container_push_internal(
    name = "snippets_cron_subscriptions_push",
    image = ":snippets_cron_subscriptions_container",
    repository = "snippets_cron_subscriptions",
)
