load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["health.go"],
    importpath = "github.com/ProdriveTechnologies/snippets/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
    ],
)
