load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["health.go"],
    importpath = "github.com/ProdriveTechnologies/snippets/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
    ],
)
